# AndroidTest

./: README.md
MyApplication/: settings.gradle
MyApplication/androidtest/: build.gradle
MyApplication/androidtest/src/main/: AndroidManifest.xml
MyApplication/app/: build.gradle
MyApplication/app/src/main/: AndroidManifest.xml
MyApplication/audioLib/: CMakeLists.txt  build.gradle
MyApplication/audioLib/src/androidTest/java/com/eathemeat/audiolib/: ExampleInstrumentedTest.kt
MyApplication/audioLib/src/main/: AndroidManifest.xml
MyApplication/audioLib/src/main/cpp/: AudioOpenSL.cpp  AudioOpenSL.h  CMakeLists.txt
MyApplication/audioLib/src/main/java/com/eathemeat/audiolib/: AudioFragment.kt
MyApplication/audioLib/src/main/java/com/eathemeat/audiolib/record/: AudioRecorder.kt
MyApplication/audioLib/src/main/res/layout/: fragment_audio.xml
MyApplication/audioLib/src/main/res/values/: ids.xml
MyApplication/audioLib/src/test/java/com/eathemeat/audiolib/: ExampleUnitTest.kt
MyApplication/basedroid/: build.gradle
MyApplication/basedroid/src/main/: AndroidManifest.xml
MyApplication/djinni/audio/: audio.djinni  gen_djinni.sh
MyApplication/djinni/audio/djinni-output-temp/: gen.stamp
MyApplication/gradle/wrapper/: gradle-wrapper.properties
MyApplication/medialib/: build.gradle
MyApplication/medialib/src/main/: AndroidManifest.xml
MyApplication/test/src/main/: AndroidManifest.xml
cmake/: CMakeLists.txt
medialib/audio/: CMakeLists.txt  audio.djinni  gen_djinni.sh
medialib/audio/djinni-output-temp/: gen.stamp
medialib/audio/djinni-output-temp/java/: AudioApi.java
medialib/audio/src/: AudioApi.cpp
(+56 files in other folders)
